--- a/apps/carecheck-front/package.json
+++ b/apps/carecheck-front/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "bash app/lib/codegen/codegen.sh"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -20,6 +21,7 @@
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "next": "15.3.0",
+    "orval": "^7.8.0",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -31,6 +33,8 @@
     "react-router-dom": "^7.5.0",
     "react-select": "^5.10.1",
     "recoil": "^0.7.7",
+    "styled-components": "^6.1.17",
+    "styled-reset": "^4.5.2",
     "sweetalert2": "^11.17.2",
     "uuid": "^11.1.0"
   },
@@ -41,7 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@types/styled-components": "^5.1.34",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.3.0",
     "eslint-plugin-react": "^7.37.5",
